<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glVertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFormIncome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/glHorizontal2"
        app:layout_constraintBottom_toTopOf="@id/glHorizontal4"
        app:layout_constraintStart_toEndOf="@id/glVertical1"
        app:layout_constraintEnd_toStartOf="@id/glVertical2"
        app:cardCornerRadius="20dp"
        android:elevation="0dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clForm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ivIcon"
        app:layout_constraintBottom_toTopOf="@id/glHorizontal4"
        app:layout_constraintStart_toEndOf="@id/glVertical1"
        app:layout_constraintEnd_toStartOf="@id/glVertical2"
        android:elevation="2dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/income_name"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:layout_marginStart="5dp"/>

        <EditText
            android:id="@+id/edItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="12sp"
            android:backgroundTint="@color/primary"
            app:layout_constraintTop_toBottomOf="@id/tvItemName"
            android:layout_marginEnd="15dp"
            android:textColor="@color/primary"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvItemNominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edItemName"
            android:text="@string/nominal"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"/>

        <EditText
            android:id="@+id/edItemNominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:backgroundTint="@color/primary"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf=
                "@id/tvItemNominal"
            android:layout_marginEnd="15dp"
            android:textColor="@color/primary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvItemCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edItemNominal"
            android:text="@string/category"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"/>

        <EditText
            android:id="@+id/edItemCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textSize="12sp"
            android:background="@drawable/edit_text_custom"
            android:drawableEnd="@drawable/ic_drop_down"
            android:focusableInTouchMode="false"
            android:longClickable="false"
            android:cursorVisible="false"
            app:layout_constraintTop_toBottomOf=
                "@id/tvItemCategory"
            android:padding="4dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/primary"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvItemDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edItemCategory"
            android:text="@string/date"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"/>

        <EditText
            android:id="@+id/edItemDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textSize="12sp"
            android:background="@drawable/edit_text_custom"
            android:drawableEnd="@drawable/ic_calendar"
            android:focusableInTouchMode="false"
            android:longClickable="false"
            tools:ignore="RtlSymmetry,TextFields"
            app:layout_constraintTop_toBottomOf=
                "@id/tvItemDate"
            android:layout_marginEnd="15dp"
            android:cursorVisible="false"
            android:padding="4dp"
            android:paddingEnd="15dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/primary"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edItemDate"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/secondary"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/submit"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:elevation="0dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/ic_form_income"
        app:layout_constraintTop_toBottomOf="@id/glHorizontal1"
        app:layout_constraintBottom_toTopOf="@id/glHorizontal3"
        android:elevation="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>