<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBalance"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        android:layout_margin="26dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBalance"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvYourBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/balance_text"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#000"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toTopOf="@id/guideline2"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4"/>

            <TextView
                android:id="@+id/tvBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Balance"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:textColor="@color/red"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/guideline2"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvExpense"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guidelineMenuHorizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guidelineMenuVertical"
            android:layout_margin="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.6"/>

                <TextView
                    android:id="@+id/tvExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expense"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/guidelineExpense"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvIncome"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guidelineMenuHorizontal"
            app:layout_constraintStart_toEndOf="@id/guidelineMenuVertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineIncome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.6"/>

                <TextView
                    android:id="@+id/tvIncome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/guidelineIncome"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineMenuHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineMenuVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvFinanceStatement"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:layout_constraintTop_toBottomOf="@id/guidelineMenuHorizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guidelineMenuVertical"
            android:layout_margin="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineFinanceStatement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.6"/>

                <TextView
                    android:id="@+id/tvFinanceStatement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finance_statement"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/guidelineFinanceStatement"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDebt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:layout_constraintTop_toBottomOf="@+id/guidelineMenuHorizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/guidelineMenuVertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineDebt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.6"/>

                <TextView
                    android:id="@+id/tvDebt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debt"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/guidelineDebt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>